--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
   </head>
 
   <body>
+    <audio autoplay loop hidden>
+  <source src="cuteSound.mp3" type="audio/mpeg" />
+  Your browser does not support the audio element.
+</audio>
     <div class="container">
       <div class="one">
         <h1 class="one">
