--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Happy Birthday!!! -26x</title>
+  <title>26xMine4evrr!</title>
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet" />
-  <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
+  <link rel="icon" type="image/png" href="img/26xxx.png?v=1">
+
   <link rel="stylesheet" href="style/style.css" />
 </head>
 
@@ -20,7 +21,7 @@
     <div class="one">
       <h1 class="one">
         <span data-node-name="greeting">Hey</span>
-        <span data-node-name="name">Lydia</span>
+        <span data-node-name="name">Hbiba</span>
       </h1>
       <p class="two" data-node-name="greetingText">I really like your name btw!</p>
     </div>
@@ -51,17 +52,15 @@
       </p>
     </div>
     <div class="six">
-      <img src="img/lydia2.png" alt="" class="lydia-dp" data-node-name="imagePath" />
+      <img src="img/meufCool.png" alt="" class="lydia-dp" data-node-name="imagePath" />
       <img src="img/hat.svg" alt="" class="hat" />
       <div class="wish">
         <h3 class="wish-hbd" data-node-name="wishHeading">Happy Birthday!</h3>
-        <h5 data-node-name="wishText">May the js.prototypes always be with you! ;)</h5>
+        <h5 data-node-name="wishText">I realy need my girllll.....</h5>
       </div>
     </div>
     <div class="seven">
       <div class="baloons">
-        <!-- Tes ballons ici (tu peux les laisser comme tu les avais) -->
-        <!-- ... -->
       </div>
     </div>
     <div class="eight">
@@ -82,7 +81,7 @@
   <script type="application/javascript" src="script/main.js"></script>
   <script>
     document.getElementById("playMusic").addEventListener("click", () => {
-      const audio = new Audio("cuteSound.mp3"); // place le fichier à la racine ou ajuste le chemin
+      const audio = new Audio("cuteSound.mp3");
       audio.loop = true;
       audio.play();
     });
